--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	  margin-top: 1%;
-    background-size: 100% 150%;
-    background-image: url("images/hotel4.jpg");
+    background-size: 100% 125%;
+    background-image: url("images/hotel5.jpg");
     background-repeat: repeat-y;
 }
 
@@ -104,8 +104,8 @@ table {
 }
 
 input[type=text] {
-    width: 80px;
-    text-align: left;
+    width: 55px;
+    text-align: center;
   }
 
   input[type=text]:focus {
@@ -136,8 +136,9 @@ input[type=text] {
   h2 {
     padding: 0px;
     margin: 0px;
-    font-size: 1.3em;
+    font-size: 1.5em;
     color: rgb(132, 28, 28);
+    font-weight: bold;
   }
 
   h1 {
@@ -154,8 +155,10 @@ footer {
     bottom              : 0;
     left                : 0;
     right               : 0;
-    width               : 40%;
-    height              : 50px
+    width               : 100%;
+    height              : 40px;
+    font-size           : medium;
+    text-align          : center;
 }
 
 #recap{
@@ -170,4 +173,8 @@ footer {
   border-radius: 50px;
   font-size: 1.3em;
   font-weight: bold;
+}
+
+.jaune {
+  color: yellow;
 }
